jte版本实现