@@ -1,5 +1,6 @@
 package com.noob.haspringboot.controller;
 
+import com.noob.haspringboot.model.Stock;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -7,9 +8,7 @@ import org.springframework.web.bind.annotation.RequestHeader;
 
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 import java.util.Random;
 
 @Controller
@@ -17,12 +16,11 @@ public class MarketController {
 
     private final Random random = new Random();
 
-    // 模拟获取自选股行情数据
-    private List<Map<String, Object>> getMockMarketData() {
-        return Arrays.asList(
-                Map.of("code", "510300", "name", "沪深300ETF", "price", String.format("%.3f", 3.500 + random.nextDouble() * 0.1), "isUp", random.nextBoolean()),
-                Map.of("code", "512890", "name", "红利ETF", "price", String.format("%.3f", 2.800 + random.nextDouble() * 0.1), "isUp", random.nextBoolean()),
-                Map.of("code", "513050", "name", "中概互联ETF", "price", String.format("%.3f", 1.200 + random.nextDouble() * 0.1), "isUp", random.nextBoolean())
+    private List<Stock> getMockMarketData() {
+        return List.of(
+                new Stock("510300", "沪深300ETF", String.format("%.3f", 3.500 + random.nextDouble() * 0.1), random.nextBoolean()),
+                new Stock("512890", "红利ETF", String.format("%.3f", 2.800 + random.nextDouble() * 0.1), random.nextBoolean()),
+                new Stock("513050", "中概互联ETF", String.format("%.3f", 1.200 + random.nextDouble() * 0.1), random.nextBoolean())
         );
     }
 
@@ -31,14 +29,12 @@ public class MarketController {
         model.addAttribute("stocks", getMockMarketData());
         model.addAttribute("updateTime", LocalTime.now().format(DateTimeFormatter.ofPattern("HH:mm:ss")));
 
-        // 【核心魔法】
-        // 如果请求头里带有 HX-Request，说明这是 HTMX 发起的局部刷新
-        // 我们只返回模板里的 "stock-table" 那个局部片段 (Fragment)
+        // JTE 改造核心：
+        // HTMX 请求时，我们直接渲染那个独立的 tag 文件
         if (isHtmxRequest) {
-            return "market :: stock-table";
+            return "tag/stockTable"; // 对应 src/main/jte/tag/stockTable.jte
         }
 
-        // 否则（比如浏览器刚打开），返回完整的整张页面
         return "market";
     }
 }
